add background color to the whole body

--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* make the body backgound a kind of beige */
+body {
+  background-color: #ede0a6;
+}
